--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "enumura",
   "main": "dist/LiquidUI.umd.js",
   "module": "dist/LiquidUI.mjs",
-  "types": "dist",
+  "types": "dist/LiquidUI.d.ts",
   "license": "MIT",
   "repository": {
     "type": "git",
