--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@enumura/liquidui",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "liquid UI is available as a component in this package.",
   "author": "enumura",
   "main": "dist/LiquidUI.umd.js",
@@ -28,6 +28,7 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "vite-plugin-css-injected-by-js": "^3.5.1",
     "vite-plugin-dts": "^3.9.0"
   },
   "devDependencies": {
